force-app/main/default/staticresources/python/Disappear/src/objects/Review_Team__c.object
<CustomObject>
    <description>Review team for DataSource or SubGroup

A review team can exists for a DataSource without SubGroup</description>
    <fields>
        <fullName>Data_Source__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Data Source</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>DataSource__c.isLogicallyDeleted__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>DataSource__c</referenceTo>
        <relationshipLabel>Review Teams</relationshipLabel>
        <relationshipName>Review_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsLogicallyDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Indication__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Product Indication</label>
        <referenceTo>ProductIndication__c</referenceTo>
        <relationshipLabel>Review Teams</relationshipLabel>
        <relationshipName>Review_Teams</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SiebelRowId__c</fullName>
        <externalId>true</externalId>
        <label>SiebelRowId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubGroup_DS__c</fullName>
        <formula>SubGroup__r.Data_Source__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SubGroup-DS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubGroup__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>SubGroup</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SubGroup__c.isLogicallyDeleted__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SubGroup__c</referenceTo>
        <relationshipLabel>Review Teams</relationshipLabel>
        <relationshipName>Review_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Review Team</label>
    <nameField>
        <label>Review Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Review Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>